common-applications/infra-test-cluster/hk/openeuler-bigfiles/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-bigfiles
  name: openeuler-bigfiles
