common-applications/infra-test-cluster/hk/openeuler-bigfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openeuler-bigfiles-service
  namespace: openeuler-bigfiles
spec:
  ports:
  - name: http-port
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: openeuler-bigfiles
  type: ClusterIP
