common-applications/infra-test-cluster/hk/openeuler-bigfiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openeuler-bigfiles-service
  namespace: openeuler-bigfiles
spec:
  ingressClassName: nginx
  rules:
  - host: openeuler-bigfiles.test.osinfra.cn
    http:
      paths:
      - backend:
          service:
            name: openeuler-bigfiles-service
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - openeuler-bigfiles.test.osinfra.cn
    secretName: tls-secrets
